# metadatax

./: .gitignore  README.md  example.env  metadatax.graphql  nginx.conf  package-lock.json  pyproject.toml  schema.graphql
.github/workflows/: documentation.yml  global-check.yml  python-publish.yml
admin/: __init__.py  settings.py  site.py  urls.py
admin/settings/: __init__.py  base.py  database.py
docs/: index.md
docs/.vitepress/: config.mts
meta_auth/: admin.py  apps.py  backend.py  form.py  models.py  serializers.py  urls.py  views.py
meta_auth/migrations/: 0001_initial.py  0002_user_accept_mailing.py  0003_alter_user_email.py  0004_permissions_evolutions.py
metadatax/: apps.py  schema.py  urls.py  utils.py  views.py
metadatax/acquisition/: apps.py  urls.py
metadatax/admin/: __init__.py  acquisition.py  data.py  equipment.py
metadatax/bibliography/: apps.py  urls.py
metadatax/common/: apps.py  urls.py
metadatax/data/: apps.py  urls.py
metadatax/equipment/: apps.py  urls.py  utils.py
metadatax/migrations/: 0001_initial.py  0002_attributes_v2.py  0003_alter_deployment_project_alter_deployment_provider.py  0004_alter_channelconfiguration_recording_format_and_more.py  0005_alter_file_bit_counts.py  0006_alter_file_unique_together.py  0007_alter_deployment_provider.py  0007_auto_20240517_1137.py  0008_alter_institution_website.py  0009_auto_20240523_0922.py  0010_alter_deployment_name.py  0011_auto_20240523_1143.py  0012_auto_20240523_1144.py  0013_auto_20240523_1155.py  0014_auto_20240523_1634.py  0014_merge_20240523_1620.py  0015_auto_20240523_1623.py  0015_auto_20240523_1655.py  0016_auto_20240523_1639.py  0016_auto_20240524_1119.py  0017_auto_20240527_0943.py  0018_auto_20240530_0907.py  0023_recorder_name.py  (+21 more)
metadatax_acquisition/: apps.py  urls.py
metadatax_common/: apps.py  urls.py
metadatax_data/: apps.py  urls.py
metadatax_equipment/: apps.py  urls.py
metadatax_ontology/: apps.py  urls.py
ontology/: urls.py
utils/: admin.py  models.py  serializers.py  views.py
website/: metadatax_view  urls.py  views.py
(+586 files in other folders)
