[tool.poetry]
name = "metadatax"
version = "0.4.0"
description = "PAM acquisition metadata"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Django = "^3.2"
django-filter = "^21"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.8.6"
django-model-prefix = "^1.1.0"

[tool.poetry.group.dev.dependencies]
drf-yasg = "^1.21.7"
drf-spectacular = "^0.27.2"
black = "^22.10.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
